<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gw2LFG filter</string>
    <string name="trigger_refresh">Autorefresh</string>
    <string name="action_settings">Settings</string>
    <string name="filter">Filtered words</string>
    <string name="summary_filter">Words which will application look for in LFG text devided by comma. See FAQ.</string>
    <string name="title_list_preference">Events</string>
    <string name="summary_list_preference">Check events which you want to show.</string>
    <string name="summary_sound_preference">Make sound when there is interesting LFG entry. See FAQ.</string>
    <string name="sound_preference">Sounds</string>
    <string name="filter_based_preferences">Filter settings</string>
    <string name="filter_settings_preferences">Filter settings</string>
    <string name="other_settings_preferences">Other</string>
    <string name="min_level">Min level</string>
    <string name="summary_min_level_preference">Applies for Fractals of the Mists mainly.</string>
    <string name="max_level">Max level</string>
    <string name="filter_dialog">Words to filter (separeted by comma)</string>
    <string name="summary_continent_preference">Leave unchecked for Europe</string>
    <string name="north_america">North America</string>
    <string name="delay">Delay</string>
    <string name="summary_delay_preference">Time between refreshing data. Lower value means lower batery drain and lower
        data consumption.
    </string>
    <string name="limit">Limit results</string>
    <string name="summary_limit_preference">Used to limit number of displayed LFG\'s</string>
    <string name="delay_seconds">Delay in seconds</string>
    <string name="help">FAQ</string>
    <string name="action_help">Help</string>
    <string name="use_filter">Filter LFG by filter words</string>
    <string name="summary_use_filter_preference">If you turn this off the option Filtered words is ignored.</string>

</resources>
