<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/filter_settings_preferences">
        <CheckBoxPreference
                android:key="filter_switch"
                android:defaultValue="false"
                android:title="@string/use_filter"
                android:summary="@string/summary_use_filter_preference"/>
        <EditTextPreference
                android:key="filter_preference"
                android:title="@string/filter"
                android:summary="@string/summary_filter"
                android:dialogTitle="@string/filter_dialog"/>

        <EditTextPreference
                android:key="min-level"
                android:title="@string/min_level"
                android:numeric="integer"
                android:summary="@string/summary_min_level_preference"
                android:dialogTitle="@string/min_level"/>
        <EditTextPreference
                android:key="max-level"
                android:title="@string/max_level"
                android:numeric="integer"
                android:summary="@string/summary_min_level_preference"
                android:dialogTitle="@string/max_level"/>

        <MultiSelectListPreference
                android:key="list_preference"
                android:title="@string/title_list_preference"
                android:summary="@string/summary_list_preference"
                android:entries="@array/events_list_preference"
                android:entryValues="@array/events_list_preference"
                android:dialogTitle="@string/title_list_preference"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/other_settings_preferences">
        <CheckBoxPreference
                android:key="sounds"
                android:defaultValue="true"
                android:title="@string/sound_preference"
                android:summary="@string/summary_sound_preference"/>
        <CheckBoxPreference
                android:key="continent"
                android:defaultValue="false"
                android:title="@string/north_america"
                android:summary="@string/summary_continent_preference"/>
        <EditTextPreference
                android:key="delay"
                android:title="@string/delay"
                android:numeric="integer"
                android:defaultValue="10"
                android:summary="@string/summary_delay_preference"
                android:dialogTitle="@string/delay_seconds"/>
        <EditTextPreference
                android:key="limit"
                android:title="@string/limit"
                android:numeric="integer"
                android:defaultValue="25"
                android:summary="@string/summary_limit_preference"
                android:dialogTitle="@string/limit"/>
    </PreferenceCategory>
</PreferenceScreen>

